Show zone type as well

--- a/site/source/index.html.erb
+++ b/site/source/index.html.erb
@@ -1,5 +1,5 @@
 ---
-title: Zoning San Diego
+title: Bed &amp; Breakfast San Diego
 ---
 
 <div class="welcome">
@@ -20,6 +20,9 @@ title: Zoning San Diego
     <div class="bedroom-type">
       <h3>6+ Gues Rooms AirBnB would be <span id="airbnb-allowed-6"></span></h3>
       <h4 class="hide" id="permit">The host should have a <i id="airbnb-permit-type-6"></i>
+    </div>
+    <div class="zone">
+      <h4>The address is in a <span id="zone"></span> area.</h4>
     </div>
   </div>
   <p>Data: <a href="http://data.sandiego.gov/dataset/zoning">Open Data Portal</a>
