--- a/site/source/layouts/layout.erb
+++ b/site/source/layouts/layout.erb
@@ -10,6 +10,12 @@
 
     <link href='//fonts.googleapis.com/css?family=Lato:300,400' rel='stylesheet' type='text/css'>
 
+    <!-- Google Tag Manager -->
+    <script>
+      (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start': new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0], j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src= 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f); })(window,document,'script','dataLayer','GTM-MTT6KM');
+    </script>
+    <!-- End Google Tag Manager -->
+
     <%= stylesheet_link_tag :site %>
     <%= javascript_include_tag "http://libs.cartocdn.com/cartodb.js/v3/3.15/cartodb.js", :site %>
   </head>
