chore: add readme update index to include the source

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -26,5 +26,5 @@ title: Bed &amp; Breakfast San Diego
     </div>
   </div>
   <p>Data: <a href="http://data.sandiego.gov/dataset/zoning">Open Data Portal</a>
-  <p>Zoning Types from Municipal Code: <a href="http://google.sannet.gov/search?site=scs_municode_ch13&partialfields=&requiredfields=PATH%3Amunicode&client=scs_ocd&filter=0&config=muni_ch13.js&layout_type=titlelink&getfields=DOCUMENT_URL.DOC_NUM.TITLE&proxystylesheet=scs_ocd&output=xml_no_dtd&proxyreload=1&sort=date:A:S:d1&num=100">Chapter 13: Zones</a>
+  <p>The tool is based on the Zoning Section of the <a href="https://www.sandiego.gov/city-clerk/officialdocs/municipal-code/chapter-13">Municipal Code</a>and on Section 141.0603 of the Municipal Code in 2016.</p>
 </div><!-- .welcome -->
